# QTR-tool

./: .gitignore  CMakeLists.txt  Callbacks.cc  Callbacks.h  ClassTable.cc  ClassTable.h  ETProxy.h  ETProxy.java  InstrumentBytecode.cc  InstrumentBytecode.h  InstrumentFlag.java  LICENSE  Makefile  Makefile.inc  ObjectSize.cc  ObjectSize.h  Readme.md  ShutdownRunnable.java  Test.java  class_list.cpp  class_list.hpp  conftest.py  et2_tests.py  et2docs.md  main.cc  main.h  qtr_tests.py  requirements.txt
ANALYSIS/: analyze_qtr_trace.R
asm-instrument/: ETProxy.java  Instrumenter.java  MANIFEST.MF  Readme.md  build.sh
asm-instrument/ASM/: asm-7.1.jar.md5
data/hello_world/: classes.list  fields.list  methods.list  trace.bz2
data/lots_of_allocs/: classes.list  fields.list  methods.list  trace.bz2
data/methods/: classes.list  methods.list  trace.bz2
data/new_call/: classes.list  methods.list  trace.bz2
java/: ArrayAlloc.java  FooClass.java  HelloWorld.java  Methods.java  NewCall.java
javassist-inst/BACKUP/instrumenter/: pom.xml
javassist-inst/et2-instrumenter/: pom.xml
javassist-inst/et2-instrumenter-java11/src/main/java/veroy/research/qtrtool/javassist/: InstrumentFlag.java  Test.java
javassist-inst/et2-instrumenter/src/main/java/veroy/research/et2/javassist/: DynamicInstrumenter.java  ETProxy.java  InstrumentFlag.java  InstrumentMethods.java  Instrumenter.java  MethodInstrumenter.java  Test.java
javassist-inst/et2-instrumenter/src/test/java/veroy/research/et2/javassist/: InstrumentMethodTest.java
javassist-inst/instrumenter/: pom.xml
javassist-inst/instrumenter/src/main/java/veroy/research/et2/javassist/: InstrumentMethod.java  InstrumentMethods.java  Instrumenter.java
javassist-inst/instrumenter/src/test/java/veroy/research/et2/javassist/: InstrumentMethodTest.java
javassist-inst/qtrtool/: pom.xml
javassist-inst/qtrtool-java11/: pom.xml
javassist-inst/qtrtool-java11/src/main/java/veroy/research/qtrtool/javassist/: DynamicInstrumenter.java  QTRProxy.java
javassist-inst/qtrtool-java11/src/test/java/veroy/research/qtrtool/javassist/: InstrumentMethodTest.java
javassist-inst/qtrtool-java13/: pom.xml
javassist-inst/qtrtool-java13/src/main/java/veroy/json/: JsonObject.java  JsonValue.java
javassist-inst/qtrtool-java13/src/main/java/veroy/research/qtrtool/javassist/: DynamicInstrumenter.java  MethodInstrumenter.java  QTRProxy.java  QtrToolTransformer.java
javassist-inst/qtrtool-java13/src/test/java/veroy/research/et2/util/: Util.java
javassist-inst/qtrtool-java13/src/test/java/veroy/research/qtrtool/javassist/: InstrumentMethodTest.java
javassist-inst/qtrtool-java13/src/test/resources/java/: FooClass.java
javassist-inst/qtrtool/src/main/java/veroy/research/qtrtool/javassist/: DynamicInstrumenter.java  ETProxy.java  MethodInstrumenter.java  QTRProxy.java  QtrToolTransformer.java
javassist-inst/qtrtool/src/test/resources/java/: LotsOfAllocs.java
python/: process_trace.py
simulator/: CMakeLists.txt  allocrecord.hpp  analyze.cpp  classinfo.cpp  classinfo.h  classinfo.hpp  create-version-cpp.sh  et2utility.hpp  execution.cpp  execution.h  execution.hpp  heap.cpp  heap.h  heap.hpp  record.hpp  refstate.h  refstate.hpp  simulator.cpp  simulator.ini  summary.hpp  tokenizer.cpp  tokenizer.hpp  version.cpp  version.hpp
tests/: BF.java  BinarySearchTree.java  FunctionalCounter.scala  FunctionalRBT.scala  LambdaCalc.java  NatArith.java
z-ARCHIVE/: Makefile
